--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,14 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: center;
+    text-align: center; 
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .col-md-4 {
@@ -15,12 +18,24 @@
     margin: 1%;
 }
 
-#bgVideo {
+.video {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1; /* Coloca o vídeo atrás de outros elementos */
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.botão {
+    background-color: #000000; 
+    border: none; 
+    padding: 15px 30px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 13px; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 50px;
+    margin: 0 auto; 
 }
